--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,18 +1,24 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
+<title>{% block title %}{% endblock %} - Personal Blog</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 <nav>
-  <h1>Flaskr</h1>
-  <ul>
-    {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
-    {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
-    {% endif %}
-  </ul>
+  <div class="nav-left">
+    <a href="{{ url_for('index') }}" class="brand">Personal Blog</a>
+  </div>
+  <div class="nav-right">
+    <ul>
+      {% if g.user %}
+        <li class="nav-user">Signed in as {{ g.user['username'] }}</li>
+        <li><a href="{{ url_for('auth.logout') }}">Log out</a></li>
+      {% else %}
+        <li><a href="{{ url_for('auth.register') }}">Sign up</a></li>
+        <li><a href="{{ url_for('auth.login') }}">Log in</a></li>
+      {% endif %}
+    </ul>
+  </div>
 </nav>
+
 <section class="content">
   <header>
     {% block header %}{% endblock %}
