--- a/flaskr/templates/blog/update.html
+++ b/flaskr/templates/blog/update.html
@@ -5,16 +5,22 @@
 {% endblock %}
 
 {% block content %}
-  <form method="post">
+  <form method="post" enctype="multipart/form-data">
     <label for="title">Title</label>
     <input name="title" id="title"
       value="{{ request.form['title'] or post['title'] }}" required>
+
     <label for="body">Body</label>
     <textarea name="body" id="body">{{ request.form['body'] or post['body'] }}</textarea>
+
+    <label for="image">Image (optional)</label>
+    <input type="file" name="image" id="image" accept="image/*">
+
     <input type="submit" value="Save">
   </form>
   <hr>
   <form action="{{ url_for('blog.delete', id=post['id']) }}" method="post">
-    <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
+    <input class="danger" type="submit" value="Delete"
+           onclick="return confirm('Are you sure?');">
   </form>
 {% endblock %}
